--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 <body>
     <div class="meta-container"></div>
-        <div class="container">
+        <div class="title-div">Etch-a-Sketch!</div>
+        <div class="sketch-div">
+            <div class="container"></div>
 
+        </div>
+            
     </div>
 </body>
 </html>
