Fixed formatting bug in html meta-container. Added background colour to webpage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="meta-container"></div>
+    <div class="meta-container">
         <div class="title-div">Etch-a-Sketch!</div>
         <div class="sketch-div">
             <div class="container"></div>
